# hackwesttx-raiders-sublease

./: .gitignore  new.ipynb
backend/: .env  .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5b0f762d9eed_merge_heads.py  5e00f7061702_sync_models_with_current_state.py  7c73b55a1c35_add_sublease_and_user_rating_tables.py  9f99be367569_initial_migration_with_sqlalchemy_models.py  ba6f8a37a1da_add_messages_tables_for_live_chat.py  c4dcfcf13021_restructure_with_new_src_directory.py  dbc73c8bb3f7_update_property_and_related_models.py
backend/src/: __init__.py  config.py  database.py  exceptions.py  main.py
backend/src/auth/: __init__.py  config.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/messages/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py  websocket.py
backend/src/properties/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/propertyimages/: __init__.py  dependencies.py  models.py  schemas.py  service.py
backend/src/subleases/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/userratings/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/src/utils/: file_upload.py  responses.py
frontend/: .env.example  .env.local  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/components/: auth-form.tsx  chatbot-page.tsx  chatbot.tsx  cta.tsx  (+19 more)
(+18 files in other folders)
